syntax = "proto3";

package cluster_proto;
option go_package = "../proto";

message Vector3 {
    optional double x = 1;
    optional double y = 2;
    optional double z = 3;
}

message Quaternion {
    optional double x = 1;
    optional double y = 2;
    optional double z = 3;
    optional double w = 4;
}

message PlayerJoin {
    string uuid = 1; // 玩家UUID
    repeated EntityStatus entities = 2;
}

message PlayerQuit {
    string uuid = 1; // 玩家UUID
}

message SpwanObject {
    optional string uuid = 1; // 对象ID
    optional Vector3 position = 2; // 对象位置
    optional Quaternion rotation = 3; // 对象旋转
    optional Vector3 scale = 4; // 对象比例
}

message MoveObject {
    optional string uuid = 1;
    optional Vector3 position = 2;
    optional Quaternion rotation = 3;
    optional Vector3 scale = 4;
}

message DestroyObject {
    optional string uuid = 1;
}

message HideObject {
    optional string uuid = 1;
}

message PlayAnimation {
    optional string uuid = 1;
    optional string animation_uuid = 2;
}

message StopAnimation {
    optional string uuid = 1;
    optional string animation_uuid = 2;
}

// 数据帧类型美剧
enum ActionType {
    SPWAN = 0;
    _MOVE = 1;
    Destroy = 2;
    Hide = 3;
    PLAY_ANIMATION = 4;
    STOP_ANIMATION = 5;
}

// 同步数据帧请求
message SyncAction {
    string uuid = 1; // 同步请求的UUID
    ActionType type = 2; // 同步请求的类型
    optional double created_at = 3; // 同步请求创建的时间，单位毫秒
    optional string creator_id = 4; // 同步请求创建者的ID

    oneof payload {
        SpwanObject spwan = 5;
        MoveObject move = 6;
        DestroyObject destory = 7;
        HideObject hide = 8;
        PlayAnimation play_anim = 9;
        StopAnimation stop_anim = 10;
    }
}

// 数据帧同步反馈
message ActionCommitted {
    optional double committed_at = 1; // 状态已同步的时间，单位毫秒
    optional string sync_action_uuid = 2; // 同步请求的UUID
    optional string creator_id = 3; // 被同步者的ID
}

message Response {
    int32 code = 1;
    string message = 2;
}

message RawMessage {
    optional bytes data = 1;
}

message FrameTick {
    uint64 tick = 1;
    double mts = 2;
    repeated EntityStatus status = 3;
}

message EntityStatus {
    string id = 1;
    optional double mts = 2;
    optional Vector3 position = 4;
    optional Vector3 rotation = 5;
    optional Vector3 scale = 6;
    int32 state = 7;//0-idle, 1-walk, 2-run, 3-dance, 4-dribble
}

// State(n) + Input(n) = State(n+1)
message MoveRequest {
    string id = 1;
    EntityStatus delta = 2;
    optional EntityStatus prediction = 3;
    double client_mts = 4;
    uint64 client_tick = 5;
}

message MoveResponse {
    EntityStatus result = 1;
    double client_mts = 2;
    uint64 client_tick = 3;
    string id = 4;
}

enum SimulateRPCMethod {
    MOVE = 0;
}

message RawMessageGroup {
    repeated bytes raw_data = 1;
}

message SimulateRPCRequest {
    string method = 1;
    uint64 client_tick = 2;
    double client_mts = 3;
    repeated bytes raw_args = 4;
}

enum SimulateRPCTicketCode {
    OK = 0;
    FAILED = 1;
}

message SimulateRPCTicket {
    uint32 code = 1;
    optional string request_id = 2;
}

message SimulateRPCResponse {
    string request_id = 1;
    uint32 code = 2;
    uint64 client_tick = 3;
    double client_mts = 4;
    optional bytes raw_result = 5;
}

message SimulateForwardRequest {
    repeated EntityStatus entities = 1;
}

message SimulateForwardResponse {
    repeated EntityStatus entities = 1;
}

message RTT {
    string id = 1;
    double start_mts = 2;
}

message RTTACK {
    string id = 1;
    double start_mts = 2;
    double received_mts = 3;
}

message Snapshot {
    RTT rtt = 1;
    repeated EntityStatus entities  = 2;
}
